<resources>
    <string name="app_name">Task01</string>

    <string name="signup">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="male_gender">Male</string>
    <string name="female_gender">Female</string>

</resources>
